--- a/main/coverage-report/index.html
+++ b/main/coverage-report/index.html
@@ -106,8 +106,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item" id="htmlwidget-85fa4ee79c8ec3771210" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-85fa4ee79c8ec3771210">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[655,177,1109,1236,1370,455,678,261,25],[213,47,459,538,553,166,102,41,3],[119,40,414,486,502,153,95,40,3],[94,7,45,52,51,13,7,1,0],["1","4","1630","617","110","628","2234","20","153"],["55.87%","85.11%","90.20%","90.33%","90.78%","92.17%","93.14%","97.56%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item" id="htmlwidget-8807aa8d9105adc66af6" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-8807aa8d9105adc66af6">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[655,177,1109,1236,1370,455,678,261,25],[213,47,459,538,553,166,102,41,3],[119,40,414,486,502,153,95,40,3],[94,7,45,52,51,13,7,1,0],["1","4","1630","617","110","628","2234","20","153"],["55.87%","85.11%","90.20%","90.33%","90.78%","92.17%","93.14%","97.56%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -1577,9 +1577,9 @@ table.table-condensed {
                       <pre class="language-r">  if (length(na_str) == 1) {</pre>
                     </td>
                   </tr>
-                  <tr class="missed">
+                  <tr class="covered">
                     <td class="num">210</td>
-                    <td class="coverage">!</td>
+                    <td class="coverage">32<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    na_str &lt;- rep(na_str, 2)</pre>
                     </td>
@@ -1957,7 +1957,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">264</td>
-                    <td class="coverage">5080<em>x</em></td>
+                    <td class="coverage">5081<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (length(x) == 0) {</pre>
                     </td>
@@ -1985,14 +1985,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">268</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  output &lt;- match.arg(output)</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">269</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (length(na_str) == 0) {</pre>
                     </td>
@@ -2013,7 +2013,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">272</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (any(is.na(na_str))) {</pre>
                     </td>
@@ -2055,7 +2055,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">278</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  txt &lt;- if (all(is.na(x)) &amp;&amp; length(na_str) == 1L) {</pre>
                     </td>
@@ -2069,7 +2069,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">280</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  } else if (is.null(format)) {</pre>
                     </td>
@@ -2083,7 +2083,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">282</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  } else if (is.function(format)) {</pre>
                     </td>
@@ -2097,28 +2097,28 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">284</td>
-                    <td class="coverage">5079<em>x</em></td>
+                    <td class="coverage">5080<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  } else if (is.character(format)) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">285</td>
-                    <td class="coverage">5056<em>x</em></td>
+                    <td class="coverage">5057<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    l &lt;- if (format %in% formats_1d) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">286</td>
-                    <td class="coverage">4978<em>x</em></td>
+                    <td class="coverage">4979<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      1</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">287</td>
-                    <td class="coverage">5056<em>x</em></td>
+                    <td class="coverage">5057<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    } else if (format %in% formats_2d) {</pre>
                     </td>
@@ -2132,7 +2132,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">289</td>
-                    <td class="coverage">5056<em>x</em></td>
+                    <td class="coverage">5057<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    } else if (format %in% formats_3d) {</pre>
                     </td>
@@ -2188,7 +2188,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">297</td>
-                    <td class="coverage">5055<em>x</em></td>
+                    <td class="coverage">5056<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    if (format != "xx" &amp;&amp; length(x) != l) {</pre>
                     </td>
@@ -2230,16 +2230,16 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">303</td>
-                    <td class="coverage">5053<em>x</em></td>
+                    <td class="coverage">5054<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">    if (length(na_str) &lt; length(x)) {</pre>
+                      <pre class="language-r">    if (length(na_str) &lt; sum(is.na(x))) {</pre>
                     </td>
                   </tr>
-                  <tr class="covered">
+                  <tr class="missed">
                     <td class="num">304</td>
-                    <td class="coverage">73<em>x</em></td>
+                    <td class="coverage">!</td>
                     <td class="col-sm-12">
-                      <pre class="language-r">      na_str &lt;- rep(na_str, length.out = length(x))</pre>
+                      <pre class="language-r">      na_str &lt;- rep(na_str, length.out = sum(is.na(x)))</pre>
                     </td>
                   </tr>
                   <tr class="never">
@@ -2251,14 +2251,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">306</td>
-                    <td class="coverage">5053<em>x</em></td>
+                    <td class="coverage">5054<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    switch(format,</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">307</td>
-                    <td class="coverage">4937<em>x</em></td>
+                    <td class="coverage">4938<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      "xx" = as.character(x),</pre>
                     </td>
@@ -2958,21 +2958,21 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">407</td>
-                    <td class="coverage">5076<em>x</em></td>
+                    <td class="coverage">5077<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  txt[is.na(txt)] &lt;- na_str</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">408</td>
-                    <td class="coverage">5076<em>x</em></td>
+                    <td class="coverage">5077<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (output == "ascii") {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">409</td>
-                    <td class="coverage">5075<em>x</em></td>
+                    <td class="coverage">5076<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    txt</pre>
                     </td>
