deploy: a9f91c103167f40b068befc9ccc8fd3d82b3343c

--- a/main/coverage-report/index.html
+++ b/main/coverage-report/index.html
@@ -106,8 +106,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item" id="htmlwidget-1837671f48c7afadff7f" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-1837671f48c7afadff7f">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/zzz.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[79,177,1185,1212,1409,665,452,678,259,25],[17,47,524,509,574,215,166,102,41,3],[11,40,478,466,527,198,154,95,40,3],[6,7,46,43,47,17,12,7,1,0],["14","4","866","1978","133","3","792","2955","28","240"],["64.71%","85.11%","91.22%","91.55%","91.81%","92.09%","92.77%","93.14%","97.56%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item" id="htmlwidget-6e55635eb622d136cfb9" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-6e55635eb622d136cfb9">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/zzz.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[79,177,1185,1212,1409,665,452,678,259,25],[17,47,524,509,574,215,166,102,41,3],[11,40,478,466,527,198,154,95,40,3],[6,7,46,43,47,17,12,7,1,0],["14","6","866","1978","133","3","792","2955","28","240"],["64.71%","85.11%","91.22%","91.55%","91.81%","92.09%","92.77%","93.14%","97.56%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -40184,14 +40184,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">39</td>
-                    <td class="coverage">4<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  stopifnot(is.data.frame(x))</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">40</td>
-                    <td class="coverage">4<em>x</em></td>
+                    <td class="coverage">5<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (NCOL(x) == 0) {</pre>
                     </td>
@@ -40219,14 +40219,14 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">44</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  y &lt;- Map(function(col, colname) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">45</td>
-                    <td class="coverage">33<em>x</em></td>
+                    <td class="coverage">38<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    label &lt;- attr(col, "label")</pre>
                     </td>
@@ -40240,7 +40240,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">47</td>
-                    <td class="coverage">33<em>x</em></td>
+                    <td class="coverage">38<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    if (is.null(label)) {</pre>
                     </td>
@@ -40268,7 +40268,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">51</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">        NA_character_</pre>
                     </td>
@@ -40289,7 +40289,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">54</td>
-                    <td class="coverage">22<em>x</em></td>
+                    <td class="coverage">27<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      if (!is.character(label) &amp;&amp; !(length(label) == 1)) {</pre>
                     </td>
@@ -40310,7 +40310,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">57</td>
-                    <td class="coverage">22<em>x</em></td>
+                    <td class="coverage">27<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">      as.vector(label)</pre>
                     </td>
@@ -40324,7 +40324,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">59</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  }, x, colnames(x))</pre>
                     </td>
@@ -40338,7 +40338,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">61</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  labels &lt;- unlist(y, recursive = FALSE, use.names = TRUE)</pre>
                     </td>
@@ -40352,7 +40352,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">63</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  if (!is.character(labels)) {</pre>
                     </td>
@@ -40380,7 +40380,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">67</td>
-                    <td class="coverage">3<em>x</em></td>
+                    <td class="coverage">4<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  labels</pre>
                     </td>
@@ -40562,28 +40562,28 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">93</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  stopifnot(</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">94</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    is.data.frame(x),</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">95</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    is.character(value),</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">96</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    ncol(x) == length(value)</pre>
                     </td>
@@ -40604,7 +40604,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">99</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  theseq &lt;- if (!is.null(names(value))) names(value) else seq_along(x)</pre>
                     </td>
@@ -40618,23 +40618,23 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">101</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  for (j in theseq) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">102</td>
-                    <td class="coverage">11<em>x</em></td>
+                    <td class="coverage">21<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">    attr(x[[j]], "label") &lt;- if (!is.na(value[j])) {</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">103</td>
-                    <td class="coverage">11<em>x</em></td>
+                    <td class="coverage">21<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">      value[j]</pre>
+                      <pre class="language-r">      unname(value[j])</pre>
                     </td>
                   </tr>
                   <tr class="never">
@@ -40674,7 +40674,7 @@ table.table-condensed {
                   </tr>
                   <tr class="covered">
                     <td class="num">109</td>
-                    <td class="coverage">1<em>x</em></td>
+                    <td class="coverage">3<em>x</em></td>
                     <td class="col-sm-12">
                       <pre class="language-r">  x</pre>
                     </td>
