--- a/main/coverage-report/index.html
+++ b/main/coverage-report/index.html
@@ -107,8 +107,8 @@ table.table-condensed {
       </ul>
       <div class="tab-content" data-tabsetid="covr">
         <div class="tab-pane active" title="Files" data-value="Files" id="tab-covr-1">
-          <div class="datatables html-widget html-fill-item" id="htmlwidget-47d5b867b7283c05e42c" style="width:100%;height:500px;"></div>
-          <script type="application/json" data-for="htmlwidget-47d5b867b7283c05e42c">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/zzz.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[78,176,733,1640,697,447,1581,1386,325,27],[17,47,121,700,250,166,689,625,38,3],[11,40,109,639,231,154,640,589,37,3],[6,7,12,61,19,12,49,36,1,0],["18","6","4293","2617","14","1141","121","2535","108","280"],["64.71%","85.11%","90.08%","91.29%","92.40%","92.77%","92.89%","94.24%","97.37%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
+          <div class="datatables html-widget html-fill-item" id="htmlwidget-b153ac45dc939f4b416d" style="width:100%;height:500px;"></div>
+          <script type="application/json" data-for="htmlwidget-b153ac45dc939f4b416d">{"x":{"filter":"none","vertical":false,"fillContainer":false,"data":[["<a href=\"#\">R/zzz.R<\/a>","<a href=\"#\">R/labels.R<\/a>","<a href=\"#\">R/generics.R<\/a>","<a href=\"#\">R/tostring.R<\/a>","<a href=\"#\">R/mpf_exporters.R<\/a>","<a href=\"#\">R/format_value.R<\/a>","<a href=\"#\">R/pagination.R<\/a>","<a href=\"#\">R/matrix_form.R<\/a>","<a href=\"#\">R/page_size.R<\/a>","<a href=\"#\">R/utils.R<\/a>"],[78,176,733,1640,697,447,1581,1386,325,27],[17,47,121,700,250,166,689,625,38,3],[11,40,109,639,231,154,640,589,37,3],[6,7,12,61,19,12,49,36,1,0],["18","6","4293","2617","14","1141","121","2535","108","280"],["64.71%","85.11%","90.08%","91.29%","92.40%","92.77%","92.89%","94.24%","97.37%","100.00%"]],"container":"<table class=\"row-border\">\n  <thead>\n    <tr>\n      <th>File<\/th>\n      <th>Lines<\/th>\n      <th>Relevant<\/th>\n      <th>Covered<\/th>\n      <th>Missed<\/th>\n      <th>Hits / Line<\/th>\n      <th>Coverage<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"dom":"t","paging":false,"columnDefs":[{"targets":6,"createdCell":"function(td, cellData, rowData, row, col) {\n  var percent = cellData.replace(\"%\", \"\");\n  if (percent > 90) {\n    var grad = \"linear-gradient(90deg, #edfde7 \" + cellData + \", white \" + cellData + \")\";\n  } else if (percent > 75) {\n    var grad = \"linear-gradient(90deg, #f9ffe5 \" + cellData + \", white \" + cellData + \")\";\n  } else {\n    var grad = \"linear-gradient(90deg, #fcece9 \" + cellData + \", white \" + cellData + \")\";\n  }\n  $(td).css(\"background\", grad);\n}\n"},{"className":"dt-right","targets":[1,2,3,4]},{"name":"File","targets":0},{"name":"Lines","targets":1},{"name":"Relevant","targets":2},{"name":"Covered","targets":3},{"name":"Missed","targets":4},{"name":"Hits / Line","targets":5},{"name":"Coverage","targets":6}],"order":[],"autoWidth":false,"orderClasses":false},"callback":"function(table) {\ntable.on('click.dt', 'a', function() {\n  files = $('div#files div');\n  files.not('div.hidden').addClass('hidden');\n  id = $(this).text();\n  files.filter('div[id=\\'' + id + '\\']').removeClass('hidden');\n  $('ul.nav a[data-value=Source]').text(id).tab('show');\n});\n}"},"evals":["options.columnDefs.0.createdCell","callback"],"jsHooks":[]}</script>
         </div>
         <div class="tab-pane" title="Source" data-value="Source" id="tab-covr-2">
           <div id="files">
@@ -44948,7 +44948,7 @@ table.table-condensed {
                     <td class="num">187</td>
                     <td class="coverage">!</td>
                     <td class="col-sm-12">
-                      <pre class="language-r">    stop("round_fmt currentlyd does not support non-missing values of digits &lt;0")</pre>
+                      <pre class="language-r">    stop("round_fmt currently does not support non-missing values of digits &lt; 0")</pre>
                     </td>
                   </tr>
                   <tr class="never">
@@ -45634,14 +45634,14 @@ table.table-condensed {
                     <td class="num">285</td>
                     <td class="coverage">1<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">        "unknown format label: ", format,</pre>
+                      <pre class="language-r">        "Unknown format label: '", format,</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">286</td>
                     <td class="coverage">1<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">        ". use list_valid_format_labels() to get a list of all formats"</pre>
+                      <pre class="language-r">        "'. Run `list_valid_format_labels()` to get a list of all available formats."</pre>
                     </td>
                   </tr>
                   <tr class="never">
@@ -45676,14 +45676,14 @@ table.table-condensed {
                     <td class="num">291</td>
                     <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">        "cell &lt;", paste(x), "&gt; and format ",</pre>
+                      <pre class="language-r">        "Cell contents &lt;", paste(x, collapse = ", "), "&gt; and format '",</pre>
                     </td>
                   </tr>
                   <tr class="covered">
                     <td class="num">292</td>
                     <td class="coverage">2<em>x</em></td>
                     <td class="col-sm-12">
-                      <pre class="language-r">        format, " are of different length"</pre>
+                      <pre class="language-r">        format, "' are of different lengths (", length(x), " vs ", l, ")."</pre>
                     </td>
                   </tr>
                   <tr class="never">
